fixtures/valid-with-warnings/02-entry-points-uses-description/input.anatomy
anatomy_version = "0.2"
tagline = "Migrated from v0.1; entry_points still use the legacy 'description' key."

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[generated]
at = 2026-05-06T12:00:00.000Z
by = "anatomy-cli@0.2.0"
model = "claude-sonnet-4-6"
schema = "https://anatomy.dev/spec/0.2/schema.json"

[[operation.entry_points]]
path = "src/main.rs"
role = "cli"
description = "argument parsing and dispatch"
